@@ -76,19 +76,19 @@ public final class SimpleNumber implements TemplateNumberModel, Serializable {
     }
 
     public SimpleNumber(byte val) {
-        this.value = new Byte(val);
+        this.value = Byte.valueOf(val);
     }
 
     public SimpleNumber(short val) {
-        this.value = new Short(val);
+        this.value = Short.valueOf(val);
     }
 
     public SimpleNumber(int val) {
-        this.value = new Integer(val);
+        this.value = Integer.valueOf(val);
     }
 
     public SimpleNumber(long val) {
-        this.value = new Long(val);
+        this.value = Long.valueOf(val);
     }
 
     public SimpleNumber(float val) {
